# rust_eureka

./: .travis.yml  AGENTS.md  Cargo.toml  INTEGRATION_TESTING.md  LICENSE  README.md  applications_response.json  dprint.json  env.sh  eureka_response.json
.github/workflows/: ci.yml
src/: errors.rs  eureka_client.rs  http.rs  lib.rs  model.rs
src/model/: amazonmetadata.rs  datacenterinfo.rs  dcname.rs  instance.rs  leaseinfo.rs  mod.rs  status.rs
src/request/: amazonmetadata.rs  datacenterinfo.rs  dcname.rs  instance.rs  leaseinfo.rs  mod.rs  register.rs  status.rs
src/response/: action_type.rs  amazonmetadata.rs  application.rs  application_response.rs  applications.rs  applications_response.rs  datacenterinfo.rs  dcname.rs  instance.rs  leaseinfo.rs  mod.rs  status.rs
tests/: integration_tests.rs  lib.rs
