[package]
name = "rust-eureka"
version = "0.1.1"
authors = ["Jack Wright <ayax79@gmail.com>"]
description = "Simple Netflix Eureka Client"
license="MIT"

[dependencies]
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
url = "1.5.1"
log = "0.3.8"
option-filter = "1.0.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"


#[dev.dependencies]
test-logger = "0.1"

