[package]
name = "rust-eureka"
version = "0.1.1"
authors = ["Jack Wright <ayax79@gmail.com>"]
description = "Simple Netflix Eureka Client"
license = "MIT"
edition = "2021"

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
log = "0.4"
option-filter = "1.0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
test-logger = "0.1"

